--- a/app/assets/file.scss/components/_form.scss
+++ b/app/assets/file.scss/components/_form.scss
@@ -1,20 +1,16 @@
-.form-container {
-    background-color: #fff; 
+.form-box {
+    
     padding: 30px;
     border-radius: 10px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
     width: 80%; 
     margin: 50px auto; 
     color: black;
 }
-.form-container h2 {
-    text-align: center;
-    color: #333; 
-    margin-bottom: 20px;
-}
+
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
 }
 
 .form-group label {
@@ -22,7 +18,13 @@
     margin-bottom: 5px;
     font-weight: bold;
 }
-
+.form-inp{
+    margin-bottom: 1rem;
+}
+.users-ttl{
+    text-align: center;
+    margin-bottom: 1.5rem;
+}
 .form-group input[type="text"],
 .form-group input[type="email"],
 .form-group input[type="password"],
@@ -33,24 +35,6 @@
     border-radius: 5px;
 }
 
-/* Button Styling */
-
-
-.btn-primary {
-    background-color: #007bff; 
-}
-
-.btn-primary:hover {
-    background-color: #0069d9; 
-}
-
-.btn-danger {
-    background-color: #dc3545; 
-}
-
-.btn-danger:hover {
-    background-color: #c82333; 
-}
 
 /* Error and Success Messages */
 .error-message, .success-message {
