--- a/app/assets/file.scss/_root.scss
+++ b/app/assets/file.scss/_root.scss
@@ -2,7 +2,7 @@
   font-size: 16px;
   @font-face {
     font-family: RobotoCondensed;
-    src: url(/font/RobotoCondensed-Regular.ttf);
+    src: url(../font/Roboto-Regular.ttf);
   }
 }
 body {
