--- a/app/assets/file.scss/components/_game.scss
+++ b/app/assets/file.scss/components/_game.scss
@@ -21,6 +21,7 @@
 }
 .game__img1 {
   filter: drop-shadow($gold 2px 2px);
+  left: 10rem;
 }
 .game__img2 {
   filter: drop-shadow($purple 2px 2px);
