--- a/app/assets/file.scss/components/_game__step.scss
+++ b/app/assets/file.scss/components/_game__step.scss
@@ -58,7 +58,7 @@
   width: fit-content;
   position: relative;
   bottom: 1rem;
-  right: 12rem;
+  right: 15rem;
 }
 .wrong__txt--disp {
   text-align: center;
@@ -132,8 +132,8 @@
   left: 3.5rem;
   top: 1.5rem;
 }
-.pop__img {
-  left: 4rem;
+.pop-img {
+ left: 9rem;
   margin-bottom: 1rem;
 }
 .game__form-btn{
