--- a/app/assets/file.scss/components/_main__content.scss
+++ b/app/assets/file.scss/components/_main__content.scss
@@ -64,7 +64,7 @@
   margin-bottom: 4rem;
 }
 .news-img {
-  width: fit-content;
+  width: 110%;
   margin: -1rem 0 1rem 0;
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
