--- a/app/assets/file.scss/components/_form.scss
+++ b/app/assets/file.scss/components/_form.scss
@@ -5,7 +5,7 @@
     
     width: 80%; 
     margin: 50px auto; 
-    color: black;
+    color: white;
 }
 
 
@@ -28,13 +28,18 @@
 .form-group input[type="text"],
 .form-group input[type="email"],
 .form-group input[type="password"],
+.form-group input[type="password-check"],
 .form-group textarea {
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
 }
-
+.password-hint{
+    font-size: 0.8rem;
+    color: $white;
+    font-style: italic;
+    }
 
 /* Error and Success Messages */
 .error-message, .success-message {
@@ -54,4 +59,11 @@
     background-color: #d4edda; 
     color: #155724; 
     border: 1px solid #c3e6cb;
+}
+.acc-lnk{
+color: $white;
+display: flex;
+align-items: center;
+justify-content: center;
+margin-bottom: 3rem;
 }
