--- a/app/assets/file.scss/components/_game__step.scss
+++ b/app/assets/file.scss/components/_game__step.scss
@@ -5,10 +5,9 @@
   justify-content: center;
 }
 .game__form-txt {
-  width: 85%;
+  width: 100%;
   height: 5rem;
   border-radius: 1rem;
-
   margin-bottom: 2.5rem;
   text-align: center;
   border: black 2px solid;
@@ -118,7 +117,7 @@
   align-items: center;
   justify-content: center;
 }
-.popupk__btn{
+.popupk__btn {
   width: 7rem;
   margin: 1rem 0.5rem 0.5rem;
 }
@@ -133,9 +132,12 @@
   top: 1.5rem;
 }
 .pop-img {
- left: 9rem;
+  left: 9rem;
   margin-bottom: 1rem;
 }
-.game__form-btn{
+.game__form-btn {
   margin-bottom: 5rem;
+}
+.question-img{
+  margin-top: 2rem;
 }
