--- a/app/assets/file.scss/components/_main__content.scss
+++ b/app/assets/file.scss/components/_main__content.scss
@@ -189,3 +189,24 @@
   margin-top: 3rem;
   font-weight: bold;
 }
+
+.testimonial-slider {
+  position: relative;
+  overflow: hidden;
+}
+
+.slide-container {
+  transition: opacity 0.5s ease-in-out;
+}
+
+.slide-container:not(.active) {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.slide-container.active {
+  opacity: 1;
+  position: relative;
+}
