--- a/app/assets/file.scss/components/_main__content.scss
+++ b/app/assets/file.scss/components/_main__content.scss
@@ -166,10 +166,11 @@
   gap: 1rem;
   margin-top: 2rem;
   margin-bottom: 3rem;
+  height: 210px;
 }
 
 .slide-text {
-  // width: 70%;
+  
   font-size: 1rem;
   line-height: 1.6;
   color: white;
@@ -177,11 +178,11 @@
 }
 
 .slide-image {
-  // width: 30%;
+ 
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  
 }
 .slide-ttl {
   text-align: center;
@@ -196,7 +197,7 @@
 }
 
 .slide-container {
-  transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .slide-container:not(.active) {
