contact form style

--- a/app/assets/file.scss/main.scss
+++ b/app/assets/file.scss/main.scss
@@ -11,3 +11,4 @@
 @import "components/guillaume";
 @import "components/game__step";
 @import "components/middleStep";
+@import "components/contact";
