--- a/app/assets/file.scss/components/_main__content.scss
+++ b/app/assets/file.scss/components/_main__content.scss
@@ -1,15 +1,36 @@
-.main__content-ttl {
+.line {
+  width: 70%;
+  border: 2px solid $blue-shadow;
+  border-radius: 10px;
+  position: relative;
+  left: 15%;
+  top: 4rem;
+}
+.line2 {
+  width: 70%;
+  border: 2px solid $blue-shadow;
+  border-radius: 10px;
+  position: relative;
+  left: 15%;
+  bottom: 2rem;
+}
+
+.main-content-ttl {
   margin: 0 0 1.5rem 0;
 }
-.main__content-img1 {
+.main-ttl {
+  text-align: center;
+  margin-top: 3.5rem;
+}
+.main-content-img1 {
   top: 2.5rem;
   right: 0.3rem;
   z-index: 1;
 }
-.main__content-img1--lg {
+.main-content-img1-lg {
   width: 7rem;
 }
-.main__content-img2--lg {
+.main-content-img2-lg {
   width: 5.5rem;
 }
 .main__content-img2 {
@@ -50,7 +71,7 @@
   flex-direction: column;
   align-items: center;
 }
-.news__content-ttl {
+.news-content-ttl {
   margin: 1rem;
 }
 .main__content-img5 {
@@ -72,7 +93,7 @@
 }
 
 @media screen and (max-width: 899px) {
-  .main__content-img1--lg,
+  .main-content-img1-lg,
   .main__content-img2--lg,
   .top__img,
   .img__container {
@@ -170,7 +191,6 @@
 }
 
 .slide-text {
-  
   font-size: 0.9rem;
   // line-height: 1.6;
   color: white;
@@ -178,22 +198,21 @@
 }
 
 .slide-image {
- 
   height: 100%;
   object-fit: cover;
   border-radius: 10px;
-  
 }
 .slide-ttl {
   text-align: center;
   font-size: 1rem;
-  margin-top: 3rem;
+  margin-top: 8rem;
   font-weight: bold;
 }
 
 .testimonial-slider {
   position: relative;
   overflow: hidden;
+  margin-bottom: 3rem;
 }
 
 .slide-container {
