--- a/app/assets/file.scss/components/_contact.scss
+++ b/app/assets/file.scss/components/_contact.scss
@@ -24,7 +24,11 @@
 }
 .message-label{
     margin-bottom: 1rem;
+    font-weight: bold;
 }
 .contact-btn{
     margin-bottom: 3rem;
+}
+.contact-label{
+    font-weight: bold;
 }
